delete taxon: simple/remapping/pruning